force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Active_RAPTOR_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_RAPTOR_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active RAPTOR Opportunity?</label>
    <type>Checkbox</type>
</CustomField>