force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Status__c</fullName>
    <label>Adoption Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not in use</fullName>
            </value>
            <value>
                <fullName>Low Adoption</fullName>
            </value>
            <value>
                <fullName>High Adoption</fullName>
            </value>
            <value>
                <fullName>Effective Adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>