force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Approved_to_stay_on_TFG__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_stay_on_TFG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved to stay on TFG</label>
    <type>Checkbox</type>
</CustomField>