force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Associated_Contract_OSA__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contract_OSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ticket #40704</description>
    <label>Associated Contract (OSA)</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Product Migration Placeholders</relationshipLabel>
    <relationshipName>Product_Migration_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>