force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Category_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Issue__c</fullName>
    <description>CR# 44951</description>
    <label>Category of Issue TBD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Implementation Issue</fullName>
            </value>
            <value>
                <fullName>Partner Issues</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Self-inflicted</fullName>
            </value>
            <value>
                <fullName>Support Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>