force-app/main/default/objects/Product_Migration_Placeholder__c/fields/CIWD_Completed__c.field-meta.xml
<CustomField>
    <fullName>CIWD_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIWD Completed?</label>
    <type>Checkbox</type>
</CustomField>