force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Competing_Against__c.field-meta.xml
<CustomField>
    <fullName>Competing_Against__c</fullName>
    <label>Competing Against</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intapp</fullName>
            </value>
            <value>
                <fullName>Intapp / W Venture</fullName>
            </value>
            <value>
                <fullName>Intapp, K2, Elegrity</fullName>
            </value>
            <value>
                <fullName>K2, Metastorm</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>