force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Consulting_Approach__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Approach__c</fullName>
    <description>How will we approach the consulting portion of this migration?</description>
    <label>Consulting Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Basic Technology Swap &amp; Scoping</fullName>
            </value>
            <value>
                <fullName>2. Conversion Strategy Review</fullName>
            </value>
            <value>
                <fullName>3. Business Process Conversion with Strategy Review</fullName>
            </value>
            <value>
                <fullName>4. Intake and Conflicts Process Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>