force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Contact_Priority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Priority__c</fullName>
    <label>Contact Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-Critical</fullName>
            </value>
            <value>
                <fullName>1-High</fullName>
            </value>
            <value>
                <fullName>2-Medium</fullName>
            </value>
            <value>
                <fullName>3-Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>