force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Current_competitive_products_owned__c.field-meta.xml
<CustomField>
    <fullName>Current_competitive_products_owned__c</fullName>
    <label>Current competitive products owned?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TR HighQ</fullName>
            </value>
            <value>
                <fullName>Aderant Drive</fullName>
            </value>
            <value>
                <fullName>iManage</fullName>
            </value>
            <value>
                <fullName>NetDocs</fullName>
            </value>
            <value>
                <fullName>Other adjacent competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>