force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Current_License_Basis__c.field-meta.xml
<CustomField>
    <fullName>Current_License_Basis__c</fullName>
    <description>SC-000022</description>
    <label>Current License Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Maintenance &amp; Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>