force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Date_Technical_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Technical_Issue_Resolved__c</fullName>
    <label>Date Technical Issue Resolved</label>
    <type>Date</type>
</CustomField>