force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Disposition_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Disposition_to_Project__c</fullName>
    <label>Disposition to Program/Migration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>