force-app/main/default/objects/Product_Migration_Placeholder__c/fields/End_Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Expected__c</fullName>
    <label>End Date (Expected)</label>
    <type>Date</type>
</CustomField>