force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Executive_Oversight__c.field-meta.xml
<CustomField>
    <fullName>Executive_Oversight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Oversight</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Migration Placeholders (Executive Oversight)</relationshipLabel>
    <relationshipName>Product_Migration_Placeholders2</relationshipName>
    <type>Lookup</type>
</CustomField>