force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Executive_Owner__c.field-meta.xml
<CustomField>
    <fullName>Executive_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Migration_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>