force-app/main/default/objects/Product_Migration_Placeholder__c/fields/In_Customer_Data_Sheet__c.field-meta.xml
<CustomField>
    <fullName>In_Customer_Data_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Customer Data Sheet?</label>
    <type>Checkbox</type>
</CustomField>