force-app/main/default/objects/Product_Migration_Placeholder__c/fields/In_Design_Phase__c.field-meta.xml
<CustomField>
    <fullName>In_Design_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Design Phase?</label>
    <type>Checkbox</type>
</CustomField>