force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Initial_Reaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reaction_Notes__c</fullName>
    <label>Initial Reaction Notes:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>