force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Intapp_Product_Equivalent__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Product_Equivalent__c</fullName>
    <label>Intapp Product Equivalent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Conflicts and WF</fullName>
            </value>
            <value>
                <fullName>Conflicts and Intake</fullName>
            </value>
            <value>
                <fullName>Conflicts and WB (DMS Pkg)</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Conflicts and Intake and WB (DMS)</fullName>
            </value>
            <value>
                <fullName>WF</fullName>
            </value>
            <value>
                <fullName>WB (DMS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>