force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Convert to Intapp Product</fullName>
            </value>
            <value>
                <fullName>Stay on TFG Product</fullName>
            </value>
            <value>
                <fullName>Stay on Botany Product</fullName>
            </value>
            <value>
                <fullName>Custom Approach</fullName>
            </value>
            <value>
                <fullName>Stay on on-premise solution(s)</fullName>
            </value>
            <value>
                <fullName>Convert to mix of on-premise and cloud solutions</fullName>
            </value>
            <value>
                <fullName>Convert to cloud solution(s)</fullName>
            </value>
            <value>
                <fullName>Save Subscription</fullName>
            </value>
            <value>
                <fullName>Maintain Momentum on Workflow Project(s)</fullName>
            </value>
            <value>
                <fullName>Kickstart Workflow Projects</fullName>
            </value>
            <value>
                <fullName>Improve subscription health rating</fullName>
            </value>
            <value>
                <fullName>Ensure high adoption</fullName>
            </value>
            <value>
                <fullName>Nurture into a reference</fullName>
            </value>
            <value>
                <fullName>Convert to 3-year contract.</fullName>
            </value>
            <value>
                <fullName>Move to Time 8 Cloud</fullName>
            </value>
            <value>
                <fullName>Ensure renewal status</fullName>
            </value>
            <value>
                <fullName>Drive HF application</fullName>
            </value>
            <value>
                <fullName>Update Watch List rule(s)</fullName>
            </value>
            <value>
                <fullName>Ensure customer completes analysis</fullName>
            </value>
            <value>
                <fullName>Resolve configuration/project issue(s)</fullName>
            </value>
            <value>
                <fullName>Resolve product issue(s)</fullName>
            </value>
            <value>
                <fullName>Resolve support issue(s)</fullName>
            </value>
            <value>
                <fullName>Resolve Relationship Issue(s)</fullName>
            </value>
            <value>
                <fullName>Co-Term</fullName>
            </value>
            <value>
                <fullName>Billing Pause/Financial Concession</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Firm Mergers and Uplifts</fullName>
            </value>
            <value>
                <fullName>Portfolio Analysis (or another Analysis)</fullName>
            </value>
            <value>
                <fullName>ABR Request</fullName>
            </value>
            <value>
                <fullName>ACV Reconcilliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>