force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Issue Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>