force-app/main/default/objects/Product_Migration_Placeholder__c/fields/LegalKEY_Customer__c.field-meta.xml
<CustomField>
    <fullName>LegalKEY_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LegalKEY Customer</label>
    <type>Checkbox</type>
</CustomField>