force-app/main/default/objects/Product_Migration_Placeholder__c/fields/License_One_Time__c.field-meta.xml
<CustomField>
    <fullName>License_One_Time__c</fullName>
    <label>License (One-Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>