force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Migration_Rating__c.field-meta.xml
<CustomField>
    <fullName>Migration_Rating__c</fullName>
    <description>How difficult will this migration be?</description>
    <label>Migration Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>