force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Must_win__c.field-meta.xml
<CustomField>
    <fullName>Must_win__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must win</label>
    <type>Checkbox</type>
</CustomField>