force-app/main/default/objects/Product_Migration_Placeholder__c/fields/OA_Project__c.field-meta.xml
<CustomField>
    <fullName>OA_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OA Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Product Migration Placeholders</relationshipLabel>
    <relationshipName>Product_Migration_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>