force-app/main/default/objects/Product_Migration_Placeholder__c/fields/PMP_Owner__c.field-meta.xml
<CustomField>
    <fullName>PMP_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMP Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Migration Placeholders (PMP Owner)</relationshipLabel>
    <relationshipName>Product_Migration_Placeholders1</relationshipName>
    <type>Lookup</type>
</CustomField>