force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Potential_Risks__c.field-meta.xml
<CustomField>
    <fullName>Potential_Risks__c</fullName>
    <label>Potential Risks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Concession from Intapp to Customer</fullName>
            </value>
            <value>
                <fullName>Financial impact on customer</fullName>
            </value>
            <value>
                <fullName>General commercial issues</fullName>
            </value>
            <value>
                <fullName>Relationship damage with Intapp</fullName>
            </value>
            <value>
                <fullName>Subscription cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>