force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Potential_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Potential_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Subscription?</label>
    <type>Checkbox</type>
</CustomField>