force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Practice_Lead_for_Support__c.field-meta.xml
<CustomField>
    <fullName>Practice_Lead_for_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SC-000022</description>
    <label>Practice Lead for Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Migration_Placeholders1</relationshipName>
    <type>Lookup</type>
</CustomField>