force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Products_on_Hot_List__c.field-meta.xml
<CustomField>
    <fullName>Products_on_Hot_List__c</fullName>
    <label>Products on Hot List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Relationships</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>OnePlace for Leaders and Partners</fullName>
            </value>
            <value>
                <fullName>OnePlace for Marketing</fullName>
            </value>
            <value>
                <fullName>OnePlace for Risk</fullName>
            </value>
            <value>
                <fullName>OnePlace for Finance</fullName>
            </value>
            <value>
                <fullName>OnePlace for IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>