force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>SC-000022</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LegalKEY Migration</fullName>
            </value>
            <value>
                <fullName>Compliguard EOL</fullName>
            </value>
            <value>
                <fullName>TFG Acquisition Migration</fullName>
            </value>
            <value>
                <fullName>Windows 10 / DTE TTM Migration</fullName>
            </value>
            <value>
                <fullName>Time Builder to TTM Migration</fullName>
            </value>
            <value>
                <fullName>Rekoop to Time Cloud Migration</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>TimeBuilder</fullName>
            </value>
            <value>
                <fullName>Rekoop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>