force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Program_Lead__c.field-meta.xml
<CustomField>
    <fullName>Program_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SC-000022</description>
    <label>Program Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Migration_Placeholders2</relationshipName>
    <type>Lookup</type>
</CustomField>