force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Project_Completion__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion__c</fullName>
    <label>% Project Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>