force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Project_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Project_Disposition__c</fullName>
    <label>Disposition to Intapp Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>