force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Reason_for_staying_on_TFG_Products__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_staying_on_TFG_Products__c</fullName>
    <label>Reason for staying on Legacy Products</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMP_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Almost live with TFG product</fullName>
            </value>
            <value>
                <fullName>Deal economics</fullName>
            </value>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>Need reassurance about Product Roadmaps</fullName>
            </value>
            <value>
                <fullName>Product Development Needed</fullName>
            </value>
            <value>
                <fullName>Stalled / Doing Nothing</fullName>
            </value>
            <value>
                <fullName>Upgrading within TFG Product Line</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Services costs</fullName>
            </value>
            <value>
                <fullName>Security concerns</fullName>
            </value>
            <value>
                <fullName>Customer resource issues</fullName>
            </value>
            <value>
                <fullName>No compelling event</fullName>
            </value>
            <value>
                <fullName>Cost reduction not large enough</fullName>
            </value>
            <value>
                <fullName>Flexibility in product selection</fullName>
            </value>
            <value>
                <fullName>Actively evaluating options</fullName>
            </value>
            <value>
                <fullName>Services costs too high</fullName>
            </value>
            <value>
                <fullName>Product costs too high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>