force-app/main/default/objects/Product_Migration_Placeholder__c/fields/Remaining_to_Bill__c.field-meta.xml
<CustomField>
    <fullName>Remaining_to_Bill__c</fullName>
    <label>Remaining to Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>